--- a/primo_ezepkitsio/primo_ezepkitsio.csproj
+++ b/primo_ezepkitsio/primo_ezepkitsio.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aggiungi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aggiungi.Designer.cs">
+      <DependentUpon>Aggiungi.cs</DependentUpon>
+    </Compile>
     <Compile Include="CProdotto.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -55,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Aggiungi.resx">
+      <DependentUpon>Aggiungi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
